compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__missing_utf_8_option_in_bit_array_constant_segment_requires_v1_5.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub const bits = <<\"hello\">>"
---
----- SOURCE CODE
pub const bits = <<"hello">>

----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:1:20
  │
1 │ pub const bits = <<"hello">>
  │                    ^^^^^^^ This requires a Gleam version >= 1.5.0

The ability to omit the `utf8` annotation for string segments was
introduced in version v1.5.0. But the Gleam version range specified in your
`gleam.toml` would allow this code to run on an earlier version like
v1.0.0, resulting in compilation errors!

Hint: Remove the version constraint from your `gleam.toml` or update it to
be:

    gleam = ">= 1.5.0"
