compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__module_used_by_unused_function_is_not_marked_as_unused.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "import wibble\nfn wobble() {\n  wibble.a\n}\n"
---
----- SOURCE CODE
-- wibble.gleam
pub const a = 1

-- main.gleam
import wibble
fn wobble() {
  wibble.a
}


----- WARNING
warning: Unused private function
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ fn wobble() {
  │ ^^^^^^^^^^^ This private function is never used

Hint: You can safely remove it.
