compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__odd_number_of_multiple_bool_negations_raise_a_single_warning_that_highlights_the_unnecessary_ones.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { let _ = !!!!!False }"
---
----- SOURCE CODE
pub fn main() { let _ = !!!!!False }

----- WARNING
warning: Unnecessary double negation (!!) on bool
  ┌─ /src/warning/wrn.gleam:1:25
  │
1 │ pub fn main() { let _ = !!!!!False }
  │                         ^^^^ You can safely remove this.
